5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1592_2043.log
== TEST (2019-03-29 22:28:05) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/4
print(round(mediap, 2))


-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:28:15) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4)/4
print(round(mediap, 2))


-- EXECUTION TIME:
0.154942
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.84
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:28:27) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4) 
print(round(mediap, 2))


-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:28:56) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4) 
print(round(mediap, 02))


-- EXECUTION TIME:
0.159893
-- ERROR:
  File "/home/codebench/codes/1592/2043/main.py", line 7
    print(round(mediap, 02))
                         ^
SyntaxError: invalid token

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:28:59) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4) 
print(round(mediap, 02))


-- ERROR:
File "XXXX", line 7
    print(round(mediap, 02))
                         ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:29:34) 
-- CODE:
nota1 = int (input("Digite nota 1: "))
nota2 = int (input("Digite nota 2: "))
nota3 = int (input("Digite nota 3: "))
nota4 = int (input("Digite nota 4: "))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4) 
print(round(mediap, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nota2 = int (input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:29:55) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4) 
print(round(mediap, 2))


-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:31:00) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 1 + nota2 * 2 + nota3 * 3 + nota4 * 4) 
print(round(mediap, 1))


-- OUTPUT:
82.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:31:28) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 0.1 + nota2 * 0.2 + nota3 * 0.3 + nota4 * 0.4) 
print(round(mediap, 1))


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:31:42) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 0.1 + nota2 * 0.2 + nota3 * 0.3 + nota4 * 0.4) 
print(round(mediap, 1))


-- EXECUTION TIME:
0.125504
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 22:31:48) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 0.1 + nota2 * 0.2 + nota3 * 0.3 + nota4 * 0.4) 
print(round(mediap, 2))


-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 22:31:58) 
-- CODE:
nota1 = float (input("Digite nota 1: "))
nota2 = float (input("Digite nota 2: "))
nota3 = float (input("Digite nota 3: "))
nota4 = float (input("Digite nota 4: "))

mediap = (nota1 * 0.1 + nota2 * 0.2 + nota3 * 0.3 + nota4 * 0.4) 
print(round(mediap, 2))


-- EXECUTION TIME:
0.156133
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
